# pdf-sku

./: CHANGELOG.md  README.md  ocr_demo.py  ocr_json.md  setup.sh
server/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  openapi.json  pyproject.toml  reprocess_all.sh  requirements.txt  sku-recognition-optimization.md
server/.github/workflows/: ci.yml
server/alembic/: env.py
server/alembic/versions/: 001_initial.py  002_add_users.py  003_add_product_grouping.py  004_fix_sku_image_binding_unique.py  005_add_owner_id_to_pdf_jobs.py  006_reconcile.py  e04905bbfd43_add_review_pages_columns.py
server/docs/: pdf_sku_collaboration_detailed_design_v1_1.md  pdf_sku_cross_module_appendix_v1_1.md  pdf_sku_database_ddl_v1_2.md  pdf_sku_evaluator_detailed_design_v1_1.md  pdf_sku_feedback_detailed_design_v1_1.md  pdf_sku_gateway_detailed_design_v1_1.md  pdf_sku_interface_contracts_v1_2.md  pdf_sku_llm_adapter_detailed_design_v1_2.md  pdf_sku_pipeline_detailed_design_v1_1.md  pdf_technical_architecture_v1_6_self_contained.md
server/scripts/: create_admin.py  reprocess_job_ai.py  run_dev.sh  run_tests.sh  smoke_test.py
server/src/pdf_sku/: __init__.py  main.py  settings.py
server/src/pdf_sku/auth/: __init__.py  dependencies.py  router.py  security.py
server/src/pdf_sku/collaboration/: __init__.py  annotation_service.py  lock_manager.py  notification.py  router.py  sla_monitor.py  task_dispatcher.py
server/src/pdf_sku/common/: __init__.py  crypto.py  database.py  dependencies.py  enums.py  exceptions.py  (+5 more)
server/tests/: conftest.py
server/tests/e2e/: test_event_chain_e2e.py
server/tests/integration/: test_calibration_db.py  test_fewshot_db.py  test_full_flow.py  test_health.py  test_job_lifecycle.py
server/tests/unit/: test_alembic_config.py  test_dashboard.py  test_docker_config.py  test_event_chain.py  test_pipeline_output_chain.py  test_prompt_enricher.py
(+317 files in other folders)
