[project]
name = "pdf-sku-server"
version = "0.2.0"
description = "PDF Classification & SKU Extraction System — Backend Server"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "SZWEGO R&D", email = "rd@szwego.com" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis[hiredis]>=5.1.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "minio>=7.2.0",
    "jinja2>=3.1.4",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    "Pillow>=10.4.0",
    "langfuse>=2.50.0",
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "sse-starlette>=2.1.0",
    "apscheduler>=3.10.4",
    "aiofiles>=24.1.0",
    "orjson>=3.10.0",
    "nanoid>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "testcontainers[postgres,redis]>=4.8.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_sku"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["pdf_sku"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=pdf_sku --cov-report=term-missing"
markers = ["unit: Unit tests", "integration: Integration tests", "e2e: E2E tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
